# riscv-benchmarks

./: .gitignore  README.md  ospike.sh
src/: .merlin  bench.ml  benchmark.sh  cycles.c  driver.ml  dune  executioner.ml  gcthrasher.ml  intfloatarray.ml  logger.ml  riscv.ml  someornone.ml  sorting.ml  utils.ml  utils.mli  zerotypes.ml
tests/: build.sh  dune  dune-workspace  gcthrasher.ml  intfloatarray.ml  rd_cycles.c  someornone.ml  sorting.ml  utils.ml  utils.mli
tests/riscv/: dune  gc.ml  intfloatarray.ml  pattern.ml  rd_cycles.c  someornone.ml  sorting.ml  test.ml  utils.ml  zerotypes.ml
tests/sandmark/numerical-analysis/: dune
tests/sandmark/sequence/: dune
tests/sandmark/simple-tests/: dune  lazy-dune.inc  lists-dune.inc  ocamlcapi-dune.inc  stacks-dune.inc  stress-dune.inc  weakretain.ml
tests/sandmark/stdlib/: array.inc  big_array.inc  bytes.inc  hashtbl.inc  map.inc  pervasives.inc  set.inc  stack.inc  str.inc  string.inc
tests/yojson/: datagen.ml  dune  yj.ml
