(include lists-dune.inc)
(include stress-dune.inc)
(include stacks-dune.inc)
(include ocamlcapi-dune.inc)
(include lazy-dune.inc)
(include weak-dune.inc)
(include finalise-dune.inc)

(executables
  (promote (until-clean) (into ../../out))
  (names alloc) (modules alloc))

(executables
 (promote (until-clean) (into ../../out))
 (names alloc_multicore) (modules alloc_multicore))

(executables (promote (until-clean) (into ../../out)) (names morestacks) (modules morestacks))

(alias (name buildbench) (deps alloc.exe morestacks.exe))
